examples/good/06-factorial.ps
int factorial(int n) {
    println(n);
    if n <= 1 {
        return 1;
    } else {
        return n * factorial(n - 1);
    }
}

println(factorial(5));