examples/bad/static_error_continue_outside_loop.ps
int i = 3;
while i > 0 {
    i = i - 1;
    continue;
}

println("");
continue;

int i = 3;